20090719
	correct order of operands to memset(!), eg in ipif [mjl]
20090718
	fix appl/cmd/stream.b error exits to include fail: [mjl]
20090717
	fix appl/lib/ip.b (see issue 186) [mjl]
	re-enable XK_ keys in port/win-x11a.c [mjl]
20090716
	add segflush calls to comp-386.c [probably need different name eventually to avoid time wasting when not needed]
20090630
	add sig (see man(1)) [via p9p and caerwyn]
20090627
	push changes described for arm in 20090330 (but not previously pushed)
	begin change of inferno-os.googlecode.com from svn to mercurial
200090612
	added support for Linux-power (ericvh; and further simplified)
20090605
	appl/cmd/disk/kfs.b dis/disk/kfs.dis - don't try to update super block if readonly(!) [issue 175]
20090526
	emu/Nt/os.c allow /dev/hoststdin input on file or pipe (thanks to caerwyn, issue 173)
	emu/port/devfs-posix.c correct handling of error return from pread (issue 172, but goes beyond that)
	emu/port/exportfs.c os/port/exportfs.c use vlong for offset
20090524
	appl/cmd/tarfs.b dis/tarfs.dis - remove accidentally small limit on file size in tar file (issue 172)
20090521
	module/vac.m appl/cmd/vacfs.b appl/lib/vac.b [issue 152] (Mecchiel)
20090505
	add -h/-t header/trailer options to man2html
20090430
	filter-deflate(2), appl/lib/^(inflate.b deflate.b): changes from mjl to support zlib headers for deflate streams as well as gzip's
20090417
	add m4(1) in its initial form (might split the macro processing proper off into a library module)
20090409
	tools/odbc/odbc.c data read should return 0 if no columns or rows (issue 170)
20090408
	tools/odbc/odbc.c use strecpy and more care in allocation (issue 169)
20090403
	change ,2 to ,#function in Solaris sparc assembler files (apparently works in gcc and sun's)
	make appl/wm/brutus.b pass input to its widgets (issue 105)
	enable fullscreen mode in MacOSX (issue 148)
20090402
	add missing emu/Linux/segflush-*.c files and remove ARM segflush from os.c
20090402